--- a/templates/project/base.html.twig
+++ b/templates/project/base.html.twig
@@ -30,7 +30,11 @@
 			<div class="card">
 				<h2>Spela Poker Solitaire</h2>
 				<h5>Title description, Maj 20, 2022</h5>
-				<div class="fakeimg" style="height:200px;">Image</div>
+<a href={{asset('./proj/play')}}><img src={{asset('./img/poker-1.jpg')}} alt="Girl in a jacket" height="300px" width="100%"></a>
+
+
+
+
 				<p>Some text..</p>
 				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 			</div>
@@ -44,9 +48,25 @@
 		</div>
 		<div class="rightcolumn">
 			<div class="card">
-				<h2>Om</h2>
-				<div class="fakeimg" style="height:100px;">Image</div>
-				<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+				<h2>Highscore</h2>
+				<div class="fakeimg" style="height:400px;">
+<table>
+	<tr>
+		<th>Spelar Namn</th>
+		<th>Poäng</th>
+	</tr>
+    {% for item in json %}
+        
+	<tr>
+<td>{{item.playername}}</td>
+<td>{{item.points}}</td>
+	</tr>
+    {% endfor %}
+	
+</table>
+
+                </div>
+               
 			</div>
 			
 		</div>
@@ -54,6 +74,7 @@
 
 	<div class="footer">
 		<h2>Footer</h2>
+
 	</div>
 
 </body>
