--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -26,15 +26,35 @@
 	<div class="row">
 		<div class="leftcolumn">
 			<div class="card">
-				<h2>Spela Poker Solitaire</h2>
+<h2>Om Projektet</h2>
 				<h5>Title description, Maj 20, 2022</h5>
-				<div class="fakeimg" style="height:200px;">Image</div>
+<div class="fakeimg" style="height:400px; color:black;">
+<div style="max-width: 60em;">
+
 				<p>Some text..</p>
 				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+	</div>			
+				</div>
 			</div>
 			<div class="card">
-<h2>Highscore</h2>
-<div class="fakeimg" style="height:400px;">
+<h2>Om Dokumentation</h2>
+
+<div class="fakeimg" style="height:400px; color:black;">
+
+<div style="max-width: 60em;">
+
+	<p>Some text..</p>
+	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+</div>
+
+</div>
+
+			</div>
+		</div>
+		<div class="rightcolumn">
+			<div class="card">
+				<h2>Om</h2>
+<div class="fakeimg" style="height:100px;">
 	<table>
 		<tr>
 			<th>Spelar Namn</th>
@@ -49,23 +69,66 @@
 		{% endfor %}
 
 	</table>
-
 </div>
-
-			</div>
-		</div>
-		<div class="rightcolumn">
-			<div class="card">
-				<h2>Om</h2>
-				<div class="fakeimg" style="height:100px;">Image</div>
 				<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
 			</div>
-			
 		</div>
 	</div>
 
 	<div class="footer">
-		<h2>Footer</h2>
+<div style="flex: 1 1 0; width: 0px;    flex-direction: column;
+		    display: flex;">
+
+
+<a style="color:white;" href={{ asset('./proj')}}>Start</a>
+
+<a style="color:white;" href={{ asset('./proj/play')}}>Spela Poker Solitaire</a>
+
+<a style="color:white;" href={{ asset('./proj/about')}}>Om</a>
+
+<a style="color:white;" href={{ asset('./proj/reset')}}>Återställ Databas</a>
+
+
+
+
+</div>
+<div style="flex: 1 1 0; width: 0px;">
+<div style="    display: flex;
+		    text-align: center;
+		    /* background: #040404; */
+		    /* margin-top: 20px; */
+		    align-items: center;
+		    justify-content: center;
+			flex-direction: column">
+
+
+<div>
+
+<a style="color:white;" href="https://github.com/dbwebb-se/mvc/">
+	<i class="fi-xnsuxl-github fi-2x icon1"></i>
+</a>
+</div>
+<p>Github</p>
+<div>
+
+<a style="color:white;" href="https://dbwebb.se/kurser/mvc">
+	<i class="fi-cnluxl-home-small fi-2x icon2"></i>
+</a>
+</div>
+<p>Dbwebb</p>
+
+</div>
+
+
+
+</div>
+<div style="flex: 1 1 0; width: 0px;">
+
+<p>Copyright &copy; Magnus</p>
+
+
+</div>
+
 	</div>
 
 </body>
