--- a/templates/project/savePoints.html.twig
+++ b/templates/project/savePoints.html.twig
@@ -52,9 +52,60 @@
 		</div>
 		</div>
 
-	<div class="footer">
-		<h2>Footer</h2>
+<div class="footer">
+	<div style="flex: 1 1 0; width: 0px;    flex-direction: column;
+			display: flex; border-right: 1px solid white;">
+
+
+		<a style="color:white;" href={{ asset('./proj')}}>Start</a>
+
+		<a style="color:white;" href={{ asset('./proj/play')}}>Spela Poker Solitaire</a>
+
+		<a style="color:white;" href={{ asset('./proj/about')}}>Om</a>
+
+		<a style="color:white;" href={{ asset('./proj/reset')}}>Återställ Databas</a>
+
+
 	</div>
+	<div style="flex: 1 1 0; width: 0px;">
+		<div style="    display: flex;
+						    text-align: center;
+						    /* background: #040404; */
+						    /* margin-top: 20px; */
+						    align-items: center;
+						    justify-content: center;
+							flex-direction: column;
+							border-right: 1px solid white;">
+
+
+			<div>
+
+				<a style="color:white;" href="https://github.com/dbwebb-se/mvc/">
+					<i class="fi-xnsuxl-github fi-2x icon1"></i>
+				</a>
+			</div>
+			<p>Github</p>
+			<div>
+
+				<a style="color:white;" href="https://dbwebb.se/kurser/mvc">
+					<i class="fi-cnluxl-home-small fi-2x icon2"></i>
+				</a>
+			</div>
+			<p>Dbwebb</p>
+
+		</div>
+
+
+	</div>
+	<div style="flex: 1 1 0; width: 0px;">
+
+		<p>Copyright &copy; Magnus</p>
+
+
+	</div>
+
+</div>
+
 
 </body>
 </html>
