--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -77,7 +77,8 @@
 
 	<div class="footer">
 <div style="flex: 1 1 0; width: 0px;    flex-direction: column;
-		    display: flex;">
+display: flex; border-right: 1px solid white;">
+
 
 
 <a style="color:white;" href={{ asset('./proj')}}>Start</a>
@@ -99,7 +100,9 @@
 		    /* margin-top: 20px; */
 		    align-items: center;
 		    justify-content: center;
-			flex-direction: column">
+			flex-direction: column;
+			border-right: 1px solid white;">
+
 
 
 <div>
