Done with project

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
 				<a href={{ asset('./metrics') }}>Metrics</a>
 			</li>
             <li>
-                <a href={{ asset('./proj')}}>Start</a>
+                <a href={{ asset('./proj')}}>Projekt kmom10</a>
             </li>
 
 			<hr>
