--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -30,21 +30,43 @@
 				<h5>Title description, Maj 20, 2022</h5>
 <div class="fakeimg" style="height:400px; color:black;">
 <div style="max-width: 60em;">
-
-				<p>Some text..</p>
-				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<p>
+Projeket gick ut på att först välja ett projekt som man skulle genomföra.
+Jag valde att göra ett Poker solitaire spel.
+Därefter genomförde jag allt enligt kraven för "Krav 1, 2, 3: Webbplats".
+</p>
 	</div>			
 				</div>
 			</div>
 			<div class="card">
-<h2>Om Dokumentation</h2>
+<h2>Dokumentationen</h2>
 
 <div class="fakeimg" style="height:400px; color:black;">
 
 <div style="max-width: 60em;">
 
-	<p>Some text..</p>
-	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<p>
+Jag använde mig utav scrutinizer och förbättrade kodkvaliteten efter den analysen som gjordes där.
+Kodkvaliteten kan absolut bli bättre men för nu pga tidspress så väljer jag att nöja mig.
+</p>
+
+<p>
+	<a href="{{ absolute_url('./../../docs/metrics') }}">docs/metrics</a>
+</p>
+<p>
+	<a href="{{ absolute_url('./../../docs/api') }}">docs/api</a>
+</p>
+<p>
+	<a href="{{ absolute_url('https://github.com/mangeos/mvc') }}">github.com/mangeos/mvc</a>
+</p>
+<p>
+	<a href="{{ absolute_url(' https://scrutinizer-ci.com/g/mangeos/mvc/') }}">
+
+		https://scrutinizer-ci.com/g/mangeos/mvc/</a>
+
+</p>
+
+
 </div>
 
 </div>
@@ -53,7 +75,7 @@
 		</div>
 		<div class="rightcolumn">
 			<div class="card">
-				<h2>Om</h2>
+				<h2>Highscore</h2>
 <div class="fakeimg" style="height:100px;">
 	<table>
 		<tr>
@@ -70,7 +92,6 @@
 
 	</table>
 </div>
-				<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
 			</div>
 		</div>
 	</div>
