--- a/templates/project/base.html.twig
+++ b/templates/project/base.html.twig
@@ -30,19 +30,14 @@
 				<h2>Spela Poker Solitaire</h2>
 				<h5>Title description, Maj 20, 2022</h5>
 <a href={{asset('./proj/play')}}><img src={{asset('./img/poker-1.jpg')}} alt="Girl in a jacket" height="300px" width="100%"></a>
-
-
-
-
-				<p>Some text..</p>
-				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<p>Starta Spelet</p>				
 			</div>
 			<div class="card">
 				<h2>Om Projektet</h2>
 				<h5>Title description, Maj 20, 2022</h5>
-				<div class="fakeimg" style="height:200px;">Image</div>
-				<p>Some text..</p>
-				<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<a href={{asset('./proj/about')}}><img src={{asset('./img/about2.jpg')}} alt="Girl in a jacket" height="300px" width="100%"></a>
+
+				<p>Om Projektet</p>
 			</div>
 		</div>
 		<div class="rightcolumn">
