--- a/templates/report/report.html.twig
+++ b/templates/report/report.html.twig
@@ -165,10 +165,77 @@
 						Att göra detta med crud i symfony var en väldigt bra uppgift och jag ser framemot kommande kmom.
 					</p>
 
-	</div>
+<h2 id="Kmom10">Kmom10</h2>
+<h3>För varje krav du implementerat, dvs 1-3, 4, 5, 6, skriver du ett textstycke om ca 5-10 meningar där du beskriver hur du löste kravet. Poängsättningen tar sin start i din text så se till att skriva väl för att undvika poängavdrag. Missar du att skriva/dokumentera din lösning så blir det 0 poäng. Du kan inte komplettera en inlämning för att få högre betyg.
+</h3>
+<h4>Krav 1, 2, 3: Webbplats</h4>
+<h5>Projektfokus</h5>
+<p>Jag valde att göra ett poker solitaire spel.På start sidan finns en navbar med 3 länkar.
+	På länken "spela poker solitaire" så kommer man till sidan som går igenom reglerna för spelet.
+	Därefter ska man skriva in sitt spelar-namn för att kunna starta spelet.
+	När 25 kort har delats ut så sparas dina poäng in i en databas. 
+	Allt i databasen visas på varje sida i projektet till höger "HighScores".
+	Man kan lätt tömma databasen genom att trycka på "Återställ Databasen" i navbaren.</p>
+<h5>Struktur och innehåll</h5>
+<p>Jag har en landningsida /proj, som syns i navbaren "Projekt kmom10".
+I about sidan har jag en kort introiduktion vad projektet handlar om.
+Jag har även 4 länkar till dokumentationen som är genererad via phpdoc, rapporten från phpmetrics, GitHub repo och Länk till Scrutinizer för ditt repo.
+Här står även en summering om projektets kodkvalitet.</p>
 
+
+
+
+
+<h5>Databas med ORM</h5>
+<p>Det finns en databas i projeket. Jag valde att spara alla poäng där.
+Jag har även en länk i navbaren som raderar alla insatta poäng. Länken finns även i about sidan.</p>
+<h5>Utseende och användbarhet</h5>
+<p>Utseendet är ändrat och ser inte alls ut som min report sida.
+	Jag tycker själv att den är enkel att förstå och tydlig att använda för användaren.
+	Det finns helt klart utvecklingspotential men med tidspressen så nöjde jag mig med detta.</p>
+<h5>Kodstil</h5>
+<p>Min kod passera phpcs med två undantag:<pre>
+Method name "Bibliotek::getFörfattare" is not in camel caps format
+ 62 | ERROR | Method name "Bibliotek::setFörfattare" is not in camel caps format
+</pre>Då jag anser att dom är i camel case så antar jag att jag kan ignorera dom två "felen".</p>
+
+<h5>Linters</h5>
+<p>Jag uppfyller inte linters kravet till fullo då jag har kommit efter lite i planeringen. </p>
+
+<h5>Enhetstestning & Kodtäckning</h5>
+<p> Jag får en kodtäckning på Card - 100%, Deck - 80%, Game - 62.96%  och Poker - 60%. 
+Detta kan såklart förbättras men jag nöjer mig med detta för tillfället.
+</p>
+
+<h5>Dokumentation, Scrutinizer, Metrics & Git repo och GitHub/Lab</h5>
+
+<p>
+	Dessa har jag länkar till på min about sida vilket står i kravet att man skulle ha.
+</p>
+
+<h3>Skriv ett allmänt stycke om hur projektet gick att genomföra. Problem/lösningar/strul/enkelt/svårt/snabbt/lång tid, etc. Var projektet lätt eller svårt? Tog det lång tid? Vad var svårt och vad gick lätt? Var det ett bra och rimligt projekt för denna kursen?
+</h3>
+<p>
+Projektet gick rätt bra att genomföra.Det svåra var att hinna klart allt i tid.
+Jag tyckte att projektet var lagom stort och ni hade olika alternativ man fick välja mellan, 
+så man kunde välja lite hur stort projekt man ville göra.
+</p>
+
+<h3>Avsluta med ett sista stycke med dina tankar om kursen och vad du anser om materialet och handledningen (ca 5-10 meningar). Ge feedback till lärarna och förslå eventuella förbättringsförslag till kommande kurstillfällen. Är du nöjd/missnöjd? Kommer du att rekommendera kursen till dina vänner/kollegor? På en skala 1-10, vilket betyg ger du kursen?
+
+</h3>
+<p>
+Kursen började med att introducera ramverket vilket var en bra start. 
+Därefter så blev kursmomenten mer djupgående med både databas och med enhetstester.
+Kursen gick igen väldigt mycket under den korta tiden vi hade och jag har inga klagomål direkt.
+Jag är nöjd med kursen och kan helt klart rekommendera den till vänner/kollegor.
+Jag ger kursen en 8:a i betyg.
+</p>
+
+
+
+	</div>
     </article>
 </div>
-
 {% endblock %}
 
