--- a/templates/report/report.html.twig
+++ b/templates/report/report.html.twig
@@ -20,6 +20,7 @@
 		<a href="#Kmom04">kmom04</a>
 		<a href="#Kmom05">kmom05</a>
 		<a href="#Kmom06">kmom06</a>
+		<a href="#Kmom10">kmom10</a>
 	
 		<h2 id="Kmom01"> Kmom01</h2>
 			<h3>Berätta kort om dina förkunskaper och tidigare erfarenheter kring objektorientering.</h3>
@@ -141,29 +142,56 @@
 
 
 						<h2 id="Kmom06">Kmom06</h2>
-				<h3>Gick det bra att jobba igenom övningen med Symfony och Doctrine. Något särskilt du tänkte/reagerade på under övningen?</h3>
-					<p>Det gick bra, övningen gick igenom Doctrine väldigt bra och det var inga konstigheter alls.</p>
-				<h3>Berätta om din applikation och hur du tänkte när du byggde upp den. Tänkte du något speciellt på användargränssnittet? Gick det bra att jobba med ORM i CRUD eller vad anser du om det?</h3>
-					<p>Min application är bygd som så att det finns en start sida. Och där kan man välja mellan att lägga till eller kolla på alla böcker som redan är tillagda.
-					Inne på create sidan så ska man skriva in detaljer om en bok i ett formulär.När man trycker på knappen "lägg till" så skickas man till sidan /bibliotek/show som visar alla tillagda böcker i en tabell.
-					I tabellen kan man trycka på id och då kommer man in på just den boken där man ser bokens titel, bild, ISBN. 
-					Där finns också 2 olika knappar delete och redigera.
-					Om man trycker på delete knappen så raderas boken.
-					När man trycker på redigera knappen så kommer man till en ny sida med ett formulär.
-					Och där kan man välja att redigera bokens detaljer. 
-					</p>
+<h3>Hur uppfattade du verktyget phpmetrics och fann du några särskilda bitar mer värdefulla än andra? Var det några särskilda metrics eller bilder du uppskattade?</h3>
+<p>
+	Jag uppfattade verktyget som ett väldigt trevligt verktyg.
+	
+	Den visade väldigt tydligt alla mätvärden.
+	
+	Den genererade en fin html sida som gjorde det enklare att se vad verktyget hade mätt.
+</p>
 
-				<h3>Berätta om du gjorde (delar av) extrauppgiften med användare och login.</h3>
-					<p>Nej jag hann tyvärr inte med det.</p>
-				<h3>Vad är din uppfattning om ORM så här långt och relatera gärna till andra sätt att jobba med applikationskod mot databaser?</h3>
-					<p>Det känns som ett smart sätt att jobba med databaser med. 
-					Det gick snabbt att komma igång med arbetssättet och var väldigt lärorikt.</p>
-				<h3>Vilken är din TIL för detta kmom?</h3>
-					<p>Ramverket Doctrine var helt nytt för mig och det var roligt att börja använda sig utav det.
-						Arbetssätter med ORM implementationen var nytt också för mig och var väldigt lärorikt att få börja jobba med.
-						Alla artiklar relaterade till uppgifterna var väldigt bra och gav en bra introduktion till Doctrine.
-						Att göra detta med crud i symfony var en väldigt bra uppgift och jag ser framemot kommande kmom.
-					</p>
+<h3>Berätta hur det gick att integrera med Scrutinizer och vilken är din första känsla av verktyget och dess badges? Vilken kodtäckning och kodkvalitet fick du efter första bygget?</h3>
+<p>
+
+	Jag hade en del problem med att få det att fungera till en början.
+	
+	Det gick bra tillslut och med facit i hand så var detta också ett väldigt trevligt verktyg att använda.
+	
+	Jag hade en coverage på 8% på första bygget.
+	
+	Vilket jag förbättrade till 11% som kanske inte var så mycket bättre men med tidspressen jag hade att bli klar så nöjda jag mig med det.
+</p>
+
+
+<h3>Hur är din egen syn på kodkvalitet, berätta lite om den? Tror du man kan man påvisa kodkvalitet i någon viss mån med badges eller vad tror du?</h3>
+
+<p>
+
+	Min syn på kodkvalitet är att den gör just koden att bli bättre och finare.
+	
+	Det kan säkert påvisa kodkvalitet i viss mån med badges jag har lite svårt att ge det en bra utvärdering då det är nytt för mig.
+
+</p>
+
+<h3>Vilken är din TIL för detta kmom?</h3>
+
+<p>
+
+	Att jobba med phpmetric var nytt för mig som var ett spännande verktyg att få introduceras till.
+	
+	Det är ett verktyg jag kommer att fortsätta använda mig utav i framtiden.
+	
+	Även scrutinizer var nytt för mig.
+	
+	Det var också ett väldigt bra verktyg precis som phpmetric och hela kmom:et var väldigt lärorikt.
+	
+	Det var väldigt mycket att ta in och inlämningen var verkligen en utmaning att genomföra i tid.
+	
+	Jag ser framemot att få börja med projektet nu.
+</p>
+
+
 
 <h2 id="Kmom10">Kmom10</h2>
 <h3>För varje krav du implementerat, dvs 1-3, 4, 5, 6, skriver du ett textstycke om ca 5-10 meningar där du beskriver hur du löste kravet. Poängsättningen tar sin start i din text så se till att skriva väl för att undvika poängavdrag. Missar du att skriva/dokumentera din lösning så blir det 0 poäng. Du kan inte komplettera en inlämning för att få högre betyg.
@@ -231,7 +259,6 @@ Kursen gick igen väldigt mycket under den korta tiden vi hade och jag har inga 
 Jag är nöjd med kursen och kan helt klart rekommendera den till vänner/kollegor.
 Jag ger kursen en 8:a i betyg.
 </p>
-
 
 
 	</div>
